Completar paginas vacias y eliminar contenido extra o de relleno inecesario

--- a/alchemy.html
+++ b/alchemy.html
@@ -12,19 +12,78 @@
         <nav><ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="alchemy.html">Alquimia</a></li>
-            <li><a href="herbalism.html">Herbolisteria</a></li>
             <li><a href="blacksmithing.html">Herreria</a></li>
             <li><a href="engineering.html">Ingenieria</a></li>
-            <li><a href="mining.html">Mineria</a></li>
             <li><a href="tailoring.html">Sastreria</a></li>
             <li><a href="enchanting.html">Encantamiento</a></li>
             <li><a href="leatherworking.html">Pelateria</a></li>
-            <li><a href="skinning.html">Desollar</a></li>  
         </ul></nav>
     </header>
 
     <section>
-
+        <article>
+            <h1>Guía de Alquimia 1 a 300</h1>
+            <p>Los alquimistas usan hierbas para crear brebajes extraños y mágicos que sanan, confieren poderes y producen efectos positivos como invisibilidad, resistencia elemental, restaurar maná y muchos más. Gracias a su poder para crear consumibles valiosos (objetos de un solo uso), los alquimistas son una adquisición muy útil para grupos y bandas. Al crear materiales poco comunes, los alquimistas pueden amasar una buena fortuna, facilitar la creación de poderosas armas y armaduras e, incluso, ¡influir en la economía de Azeroth!</p>
+            <p>La mayoría de los brebajes alquímicos se pueden crear en cualquier parte siempre y cuando tengas los componentes necesarios, que puedes comprar a los vendedores, comerciar con otros jugadores o encontrar por el mundo.</p>
+            <p>A menudo, la alquimia suele ir de la mano con la profesión de recolección herboristería, ya que las hierbas que se encuentran por el mundo suelen formar parte de las recetas de la mayoría de las mezclas.</p>
+        </article>
+        <article>
+            <img src="images/alchemy/subiendo alquimia.jpg" alt="">
+            <h3>Aprendiz Alquimista</h3>
+            <p>Como sucede con cualquier profesión, nuestra primera parada debe ser junto al instructor de alquimia (cualquiera de las capitales) para que nos enseñe esta profesión primaria y el desarrollo de habilidad "Aprendiz alquimista" que nos permitirá ponernos manos a la obra con esta profesión.</p>
+            <p>Es importante remarcar para los nuevos jugadores que cualquier vial necesario para las recetas de alquimia, los podemos comprar en los intendentes situados cerca de los instructores de alquimia.</p>
+        </article>
+        <article>
+            <h3>Alquimia 1-60</h3>
+            <p>Crearemos 62 Poción de sanación menor ayudados de Flor de paz y Hojaplata. Una vez hemos alcanzado los 60 puntos en Alquimia, aprenderemos el rango de Oficial Alquimista y las nuevas recetas disponibles en el instructor.</p>
+        </article>
+        <article>
+            <h3>Alquimia 60-110</h3>
+            <p>Crearemos 72 Lesser Healing Potion ayudados de las Poción de sanación menor creadas anteriormente (más alguna nueva si es necesario) y Brezospina. En este punto solamente nos quedará aprender las recetas disponibles en el instructor para continuar subiendo nuestra profesión.</p>
+        </article>
+        <article>
+            <h3>Alquimia 110-140</h3>
+            <p>Crearemos 33 Healing Potion ayudados de Brezospina y Hierba cardenal. Una vez alcancemos los 140 puntos en Alquimia, acudiremos junto a Ainethil en (Darnassus) si perteneces a la Alianza o Doctor Herbert Halsey (Entrañas) si perteneces a la Horda para aprender el rango de Experto Alquimista y las nuevas recetas disponibles en el instructor.</p>
+            <img src="images/alchemy/doc herbert.jpg" alt="">
+        </article>
+        <article>
+            <h3>Alquimia 140-155</h3>
+            <p>Crearemos 19 Lesser Mana Potion ayudados de Marregal y Alga estranguladora. En este punto solamente nos quedará aprender las recetas disponibles en el instructor para continuar subiendo nuestra profesión.</p>
+        </article>
+        <article>
+            <h3>Alquimia 155-185</h3>
+            <p>Crearemos 37 Greater Healing Potion ayudados de Vidarraíz y Sangrerregia. En este punto solamente nos quedará aprender las recetas disponibles en el instructor para continuar subiendo nuestra profesión.</p>
+        </article>
+        <article>
+            <h3>Alquimia 185-210</h3>
+            <p>Crearemos 25 Elixir of Agility ayudados de Alga estranguladora y Espina de oro. Una vez alcancemos los 210 puntos en Alquimia, acudiremos junto a Kylanna Vientosusurro en (Bastión Plumaluna, Feralas) si perteneces a la Alianza o Rogvar (Rocal, Pantano de las Penas) si perteneces a la Horda para aprender el rango de Alquimista Artesano y las nuevas recetas disponibles en el instructor.</p>
+            <img src="images/alchemy/Rogvar.jpg" alt="">
+        </article>
+        <article>
+            <h3>Alquimia 210-215</h3>
+            <p>Crearemos 5 Elixir of Greater Defense ayudados de Acérita salvaje y Espina de oro. En este punto solamente nos quedará aprender las recetas disponibles en el instructor para continuar subiendo nuestra profesión.</p>
+        </article>
+        <article>
+            <h3>Alquimia 215-230</h3>
+            <p>Crearemos 20 Superior Healing Potion ayudados de Solea y Mostacho de Khadgar. En este punto solamente nos quedará aprender las recetas disponibles en el instructor para continuar subiendo nuestra profesión.</p>
+        </article>
+        <article>
+            <h3>Alquimia 230-250</h3>
+            <p>Crearemos 22 Elixir of Detect Undead ayudados de Lágrimas de Arthas. En este punto solamente nos quedará aprender las recetas disponibles en el instructor para continuar subiendo nuestra profesión.</p>
+        </article>
+        <article>
+            <h3>Alquimia 250-265</h3>
+            <p>Crearemos 17 Elixir of Greater Agility ayudados de Solea y Espina de oro. Una vez hemos llegado a 265 puntos de profesión nos dirigiremos a comprar la Receta: poción de maná excelente a Ulthir (Darnassus) si pertenecemos a la Alianza o Algernon (Entrañas) si nuestra lealtad reside en la Horda.</p>
+        </article>
+        <article>
+            <h3>Alquimia 265-285</h3>
+            <p>Crearemos 22 Superior Mana Potion ayudados de Solea y Carolina. Una vez hemos alcanzado los 285 puntos de profesión nos dirigiremos a comprar la Receta: poción de sanación sublime a Evie Brebegira en Vista Eterna (Cuna del Invierno).</p>
+        </article>
+        <article>
+            <h3>Alquimia 285-300</h3>
+            <p>Para terminar de subir nuestra profesión de alquimia crearemos 20 Major Healing Potion ayudados de Sansam dorado y Salviargenta de montaña. Para finalizar, solamente nos quedará aprender las últimas recetas disponibles en nuestro instructor de alquimia.</p>
+            <img src="images/alchemy/Pocion Sublime.jpg" alt="">
+        </article>
     </section>
     </div>
 </body>
