--- a/blacksmithing.html
+++ b/blacksmithing.html
@@ -12,20 +12,17 @@
         <nav><ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="alchemy.html">Alquimia</a></li>
-            <li><a href="herbalism.html">Herbolisteria</a></li>
             <li><a href="blacksmithing.html">Herreria</a></li>
             <li><a href="engineering.html">Ingenieria</a></li>
-            <li><a href="mining.html">Mineria</a></li>
             <li><a href="tailoring.html">Sastreria</a></li>
             <li><a href="enchanting.html">Encantamiento</a></li>
             <li><a href="leatherworking.html">Pelateria</a></li>
-            <li><a href="skinning.html">Desollar</a></li>  
         </ul></nav>
     </header>
 
     <section>
         <article>
-            <div align="center"><img src="images/blacksmithing/guiaDeHerreria.png" alt="" class="logoGuia"></div>
+            <h1>Guía de Herrería 1 a 300</h1>
             <p>Los herreros utilizan su pericia con el martillo y el yunque para crear armas mortales, pesados trajes de malla, armaduras de placas y más objetos especializados. Los herreros con verdadero talento también pueden modificar su propio equipo añadiendo ranuras para gemas mágicas. El equipamiento que fabrican permite a los herreros equipar a los miembros del grupo o de la hermandad y a sí mismos (sobre todo a aquellos que llevan armaduras pesadas), y vender sus productos en la casa de subastas.</p>
             <p>La mayor parte del trabajo de herrería debe realizarse con un martillo y un yunque. Se pueden encontrar yunques de herrería (y forjas para fundir minerales) en casi todas las ciudades y capitales.</p>
             <p>A menudo, la herrería suele ir de la mano de la profesión de recolección minería, ya que los minerales que se obtienen al picar menas suelen ser componentes esenciales de la mayoría de las armas y armaduras.</p>
@@ -35,29 +32,6 @@
             <p>Como sucede con cualquier profesión, nuestra primera parada debe ser junto al instructor de herrería (Orgrimmar, Ventormenta...) para que nos enseñe esta profesión primaria y el desarrollo de habilidad "Aprendiz herrero" que nos permitirá ponernos manos a la obra con esta profesión.</p>
             <p>La presente guía la dividiremos en tres partes. La primera se centrará en detallaros los materiales necesarios para subir la profesión, la segunda, el método para llegar a los 300 puntos con herrería y por último, las dos especializaciones de ingeniería.</p>
             <img src="images/blacksmithing/Saru Furiacerada.jpg" alt="">
-        </article>
-        <article>
-            <h3>Materiales necesarios</h3>
-            <p>Vamos a pasar a listaros todos los materiales necesarios para subir la profesión de herrería. Este listado dependerá de la suerte que tengamos a la hora de subir los puntos de dicha profesión, por lo que podréis necesitar un poco más o menos de los materiales que vamos a citar a continuación (están excluidos los materiales comprados al vendedor):</p>
-            <ul>
-                <li>125 unidades de Piedra férrea.</li>
-                <li>128 unidades de Piedra burda.</li>
-                <li>5 unidades de Barra de plata.</li>
-                <li>120 unidades de Barra de bronce.</li>
-                <li>195 unidades de Piedra pesada.</li>
-                <li>5 unidades de Barra de oro.</li>
-                <li>200 unidades de Barra de hierro.</li>
-                <li>410 unidades de Barra de acero.</li>
-                <li>128 unidades de Piedra sólida.</li>
-                <li>150 unidades de Barra de mitril.</li>
-                <li>90 unidades de Paño de tejido mágico.</li>
-                <li>15 unidades de Piedra densa.</li>
-                <li>680 unidades de Barra de torio.</li>
-                <li>60 unidades de Cristal de poder azul.</li>
-                <li>20 unidades de Rubí estrella.</li>
-                <li>40 unidades de Cuero basto.</li>
-                <li>20 unidades de Cristal de poder verde.</li>
-            </ul>
         </article>
         <article>
             <h3>Herrería 1-75</h3>
