--- a/engineering.html
+++ b/engineering.html
@@ -12,20 +12,17 @@
         <nav><ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="alchemy.html">Alquimia</a></li>
-            <li><a href="herbalism.html">Herbolisteria</a></li>
             <li><a href="blacksmithing.html">Herreria</a></li>
             <li><a href="engineering.html">Ingenieria</a></li>
-            <li><a href="mining.html">Mineria</a></li>
             <li><a href="tailoring.html">Sastreria</a></li>
             <li><a href="enchanting.html">Encantamiento</a></li>
             <li><a href="leatherworking.html">Pelateria</a></li>
-            <li><a href="skinning.html">Desollar</a></li>  
         </ul></nav>
     </header>
 
     <section>
         <article>
-            <div align="center"><img src="images/engineering/guiaDeIngenieria.png" alt="" class="logoGuia"></div>
+            <h1>Guía de Ingeniería 1 a 300</h1>
             <p>Los ingenieros aprovechan su creatividad para fabricar una inmensa (y a veces aleatoria) variedad de objetos útiles. Trasteando sin descanso y lidiando con fallos continuos, un ingeniero puede crear objetos totalmente únicos: potenciadores de vista, armas potentes, mascotas robots... Los ingenieros más hábiles utilizan sus inventos para resolver problemas y hacer que sus vidas y las de sus compañeros sean más fáciles, dinámicas y mejores.</p>
             <p>La mayoría de los esquemas de ingeniería se pueden fabricar en cualquier parte, siempre y cuando tengas los materiales necesarios para dar forma a tu creación.</p>
             <p>Suele ser muy común que los ingenieros se especialicen también en minería: los metales y menas que se obtienen de esta manera sirven para construir sus invenciones.</p>
@@ -36,28 +33,6 @@
             <p>Como sucede con cualquier profesión, nuestra primera parada debe ser junto al instructor de ingeniería (Orgrimmar, Ventormenta...) para que nos enseñe esta profesión primaria y el desarrollo de habilidad "Aprendiz ingeniero" que nos permitirá ponernos manos a la obra con esta profesión.</p>
             <p>La presente guía la dividiremos en tres partes. La primera se centrará en detallaros los materiales necesarios para subir la profesión, la segunda, el método para llegar a los 300 puntos con ingeniería y por último, las dos especializaciones de ingeniería.</p>
             <img src="images/engineering/aprendizIngeniero.jpg" alt="">
-        </article>
-        <article>
-            <h3>Materiales necesarios</h3>
-            <p>Vamos a pasar a listaros todos los materiales necesarios para subir la profesión de ingeniería. Este listado dependerá de la suerte que tengamos a la hora de subir los puntos de dicha profesión, por lo que podréis necesitar un poco más o menos de los materiales que vamos a citar a continuación (están excluidos los materiales comprados al vendedor):</p>
-            <ul>
-                <li>62 unidades de Piedra férrea</li>
-                <li>44 unidades de Barra de cobre.</li>
-                <li>33 unidades de Piedra burda.</li>
-                <li>10 unidades de Barra de plata.</li>
-                <li>69 unidades de Barra de bronce.</li>
-                <li>7 unidades de Paño de lana.</li>
-                <li>75 unidades de Piedra pesada.</li>
-                <li>61 unidades de Cuero pesado.</li>
-                <li>4 unidades de Barra de acero.</li>
-                <li>100 unidades de Piedra sólida.</li>
-                <li>21 unidades de Barra de hierro.</li>
-                <li>110 unidades de Barra de mitril.</li>
-                <li>5 unidades de Paño de tejido mágico.</li>
-                <li>44 unidades de Piedra densa.</li>
-                <li>168 unidades de Barra de torio.</li>
-                <li>32 unidades de Paño rúnico.</li>
-            </ul>
         </article>
         <article>
             <h3>Ingeniería 1-75</h3>
