--- a/home.html
+++ b/home.html
@@ -12,40 +12,32 @@
         <nav><ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="alchemy.html">Alquimia</a></li>
-            <li><a href="herbalism.html">Herbolisteria</a></li>
             <li><a href="blacksmithing.html">Herreria</a></li>
             <li><a href="engineering.html">Ingenieria</a></li>
-            <li><a href="mining.html">Mineria</a></li>
             <li><a href="tailoring.html">Sastreria</a></li>
             <li><a href="enchanting.html">Encantamiento</a></li>
             <li><a href="leatherworking.html">Pelateria</a></li>
-            <li><a href="skinning.html">Desollar</a></li>  
         </ul></nav>
     </header>
 
     <section>
         <article>
-            <h1>Guia de Profesiones</h1>
-            <p>En esta seccion Home veremos una vista previa de las profesiones que veremos en World of Warcraft: Classic. <br>Esta guía esta pensada para aquellos jugadores que no estén familiarizados con el sistema de profesiones durante WoW Classic para que tengan un mejor entendimiento. <br>En el menu de navegación, también podrás ver guás de profesiones más específicas.</p>
+            <h2>Resumen del contenido de la pagina</h2>
+            <p>En esta seccion Home veremos una vista previa de las profesiones del tipo Producción que veremos en World of Warcraft: Classic. <br>Esta guía esta pensada para aquellos jugadores que no estén familiarizados con el sistema de profesiones durante WoW Classic para que tengan un mejor entendimiento. <br>En el menu de navegación, también podrás ver guás de profesiones más específicas.</p>
 
-            <table><tr><td>
+            <table class="indice"><tr><td>
                 <h2>Contenido</h2>
                 <ul>
                     <ol><a href="#SP">1 Sistema de profesiones en WoW Classic</a></ol>
                     <ol><a href="#NP">2 Niveles de profesión</a></ol>
                     <ol><a href="#RP">3 Rangos de profesión</a></ol>
-                    <ol><a href="#RaP">4 Raciales de profesión</a></ol>
-                    <ol><a href="#OP">5 Objetos necesarios para profesiones</a></ol>
-                    <ol><a href="#PP">6 Profesiones Primarias</a>
+                    <ol><a href="#PP">6 Profesiones Primarias de Producción</a>
                         <ol><a href="#A">6.1 Alquimia</a></ol>
                         <ol><a href="#H">6.2 Herrería</a></ol>
                         <ol><a href="#I">6.3 Ingeniería</a></ol>
                         <ol><a href="#P">6.4 Peletería</a></ol>
                         <ol><a href="#S">6.5 Sastrería</a></ol>
-                        <ol><a href="#D">6.6 Desuello</a></ol>
                         <ol><a href="#E">6.7 Encantamiento</a></ol>
-                        <ol><a href="#B">6.8 Botánica</a></ol>
-                        <ol><a href="#M">6.9 Minería</a></ol>
                     </ol>
                 </ul>
             </td></tr></table>
@@ -74,7 +66,7 @@
 
         <article>
             <a id="NP"><h3>Niveles de profesión</h3></a>
-            <p>Para subir el nivel de profesión solamente tenemos que ir haciendo o recolectando objetos hasta que el juego determine que es demasiado fácil hacerlo. Para saber este punto, se diferencia en colores: si a la hora de hacerlo/recolectarlo nos aparece en <span>naranja</span>, tiene una probabilidad del 100% de darnos un punto de nivel. Si aparece en <span>amarillo</span>, la probabilidad de conseguir el punto de habilidad es frecuente. Si aparece en <span>verde</span>, la probabilidad es poco frecuente. Y si aparece en <span>gris</span>, no nos va a dar ningún punto de nivel de habilidad.</p>
+            <p>Para subir el nivel de profesión solamente tenemos que ir haciendo o recolectando objetos hasta que el juego determine que es demasiado fácil hacerlo. Para saber este punto, se diferencia en colores: si a la hora de hacerlo/recolectarlo nos aparece en <span style="color: orangered;">naranja</span>, tiene una probabilidad del 100% de darnos un punto de nivel. Si aparece en <span style="color: yellow;">amarillo</span>, la probabilidad de conseguir el punto de habilidad es frecuente. Si aparece en <span style="color: green;">verde</span>, la probabilidad es poco frecuente. Y si aparece en <span style="color: grey;">gris</span>, no nos va a dar ningún punto de nivel de habilidad.</p>
         </article>
 
         <article>
@@ -95,29 +87,8 @@
             </ul>
             <p>Las profesiones de producción son aquellas en las que recolectamos recetas que nos enseñan a hacer equipo que podemos equipar o comerciar: Alquimia, Herrería, Cocina, Ingeniería, Pelatería y Sastreria. <br>Las profesiones de recolección son las que ayudan a las profesiones de producción adquiriendo materiales requeridos para crear objetos: Botánica, Minería, Desuello y Pesca. <br>Además, las profesiones consideradas de servicio son las que generan objetos que benefician a los jugadores: Encantamiento y Primeros Auxilios.</p>
         </article>
-
         <article>
-            <a id="RaP"></a><h3>Raciales de profesiones</h3>
-            <p>Tenemos dos razas que ofrecen bonificación para las profesiones:</p>
-            <ul>
-                <li>Los Tauren tiene la racial de Cultivo, que aumenta la habilidad de Botánica en 15p</li>
-                <li>Los Gnomos tienen la racial de <span>Especialización de Ingeniería</span> que aumenta la habilidad de Ingeniería en 15p.</li>
-            </ul>
-        </article>
-
-        <article>
-            <a id="OP"></a><h3>Objetos necesarios para profesiones</h3>
-            <p>Necesitaremos llevar encima ciertos objetos dependiendo de la profesión. Estos objetos no podemos dejarlos en el banco, siempre tienen que estar en nuestra mochila a la hora de crear o fabricar.</p>
-            <ul>
-                <li>Con <b>Herrería</b> tendremos que llevar el <b>Martillo de Herrero</b> y usarlo en el Yunque.</li>
-                <li>Con <b>Desuello</b> tendremos que llevar <b>Cuchillo para Desollar</b>.</li>
-                <li>Con <b>Encantamiento</b> tendremos que llevar una <b>Vara de Encantamiento</b>.</li>
-                <li>Con <b>Minería</b> tendremos que llevar encima un <b>Pico de minero</b>.</li>
-            </ul>
-        </article>
-
-        <article>
-            <a id="PP"></a><h3>Profesiones Primarias</h3>
+            <a id="PP"></a><h3>Profesiones Primarias de Producción</h3>
             <a id="A"></a><h4>Alquimia</h4>
             <img src="images/home/alquimia.jpg" alt="" class="logoProfesion">
             <p>Con la profesión de Alquimia podremos crear frascos, pociones, elixires y otros objetos que podemos usar para obtener un beneficio. Es muy útil para mazmorras y bandas y lo habitual es compaginarlo con Botánica para poder obtener los materiales(hierbas) para hacer los objetos. <br>También podemos complementarlo con Pesca como profesión secundaria y obtener el Aceite de Pescado, entre otros, que necesitaremos en algunos casos.</p>
@@ -133,18 +104,9 @@
             <a id="S"></a><h4>Sastrería</h4>
             <img src="images/home/sastreria.png" alt="" class="logoProfesion">
             <p>Lo habitual es que los casters aprendan Sastrería junto a Encantamiento. <br>En Sastrería aprenderemos a hacer objetos de Tela y Capas. Cuando llegamos al máximo nivel los objetos que hacemos ofrecen resistencia y bonificación. Los materiales que necesitaremos los iremos recogiendo de humanoides y comprando a comerciantes, principalmente. <br>Además, con Sastrería podemos conseguir hacer bolsas con más espacio, como <b>Bolsa de Paño Rúnico</b>, pero también podemos hacer bolsas especiales para profesiones como la <b>Cartera de Cenarius</b>, o una bolsa especial para Brujos <b>Bolsa de tela vil del Núcleo</b>.</p>
-            <a id="D"></a><h4>Desuello</h4>
-            <img src="images/home/desuello.jpg" alt="" class="logoProfesion">
-            <p>Desuello es la profesión que complementa a Pelatería, ya que proporciona cueros, hierbas y escamas que son necesarias para algunas recetas. <br>Para poder desollar a un cuerpo que nos vaya a proporcionar cuero, necesitaremos tener siempre en nuestra mochila un <b>Cuchillo para Desollar</b> que debemos comprar previamente.</b></p>
             <a id="E"></a><h4>Encantamiento</h4>
             <img src="images/home/encantamiento.png" alt="" class="logoProfesion">
             <p>Con encantamiento podemos mejorar parte de nuestro equipo, poniendo dicho encantamiento en armas, zapatos, brazaletes, pecho, capa, guantes y escudo. Este encantamiento es permanente a no ser que nos cambiemos el objeto o pongamos otro encantamiento diferente en el mismo. <br>Para conseguir los materiales que necesitamos para hacer los encantamientos, tendremos que desencantar equipo que se convertirá en polvo. <br>Normalmente se suele emparejar esta profesión con Sastrería. <br>Para poder hacer Encantamiento, necesitaremos una Vara de encantamiento como <b>Vara rúnica de arcanista</b> que debemos tener siempre en nuestra mochila encima. Si lo tenemos en el banco, no podremos desencantar.</b></p>
-            <a id="B"></a><h4>Botánica</h4>
-            <img src="images/home/herboristeria.png" alt="" class="logoProfesion">
-            <p>Actualmente lo conocemos como Herbolistería. Se suele compaginar con Alquimia para poder usar las plantas como componentes de recetas.</p>
-            <a id="M"></a><h4>Minería</h4>
-            <img src="images/home/mineria.jpg" alt="" class="logoProfesion">
-            <p>Minería es la profesión óptima para Herrería e Ingeniería, para obtener materiales para las recetas de dichas profesiones. Podremos recolectar menas por el mundo, pero debemos llevar encima siempre un <b>Pico de minero</b> y no olvidarlo en el banco. <br>Además, cuando hayamos recolectado las menas, debemos fundirlas cerca de un horno para convertirlo en barras, que es el material que nos pedirán para hacer recetas.</b></p>
         </article>
     </section>
     </div>
