Agregar campo obligatorio en el form de index

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 </head>
 <body background="images/General/fondoRojo.jpg">
 
-    <form>
+    <form method="GET">
     <div class="contorno">
         
         <div class="line"><hr></div>
-        <div class="cajas"><input class="mailYPass" type="email" name="mail" id="" placeholder="Correo electrónico">   
-        <input class="mailYPass" type="password" name="" id="" placeholder="Contraseña"></div>
+        <div class="cajas"><input class="mailYPass" type="email" name="mail" id="mail" placeholder="Correo electrónico" required>   
+        <input class="mailYPass" type="password" name="password" id="password" placeholder="Contraseña" required></div>
         <div><a href="home.html"><input class="boton1" type="submit" value="Entrar"></a></div>
         <div><a href="#">¿Olvidaste tu contraseña?</a></div>
         <div class="line"><hr></div>
