renombre el archivo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             if(user.length==0 || pass.length==0){
                 alert("Error user o pass incorrecto");
-                window.open("indexLogin.html");}
+                window.open("index.html");}
             else{
                 alert("Bienvenido");
                 window.open("home.html");}
