actualice el nombre index

--- a/indexRecuperar.html
+++ b/indexRecuperar.html
@@ -12,7 +12,7 @@
 
             if(user.length>0)
             {alert("Revise bandeja de entrada del correo");
-            window.open("indexLogin.html"); }
+            window.open("index.html"); }
         }
     </script>
 </head>
