--- a/indexRegistrar.html
+++ b/indexRegistrar.html
@@ -15,7 +15,7 @@
             if(user.length>0&&pass1.length>0&&pass2.length>0){
                 if(pass1 == pass2){
                     alert("Cuenta Creada Exitosamente");
-                    window.open("indexLogin.html");}
+                    window.open("index.html");}
                 else
                     alert("Error! las contraseñas no coinciden");}
             else{
