cambie window.open por window.location.replace

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
             if(user.length==0 || pass.length==0){
                 alert("Error user o pass incorrecto");
-                window.open("index.html");}
+                window.location.replace("index.html");}
             else{
                 alert("Bienvenido");
-                window.open("home.html");}
+                window.location.replace("home.html");}
         }
 
         function register()
         {
-            window.open("indexRegistrar.html");
+            window.location.replace("indexRegistrar.html");
         }
     </script>
 </head>
